# nixos-systool

./: .envrc  Cargo.toml  README.md  deny.toml  flake.nix
pkgs/tools/nixos-systool/: Cargo.toml  flake.nix
pkgs/tools/nixos-systool/src/: config.rs  excursion.rs  flake_lock.rs  lib.rs  main.rs  messages.rs
src/: cli.rs  commands.rs  config.rs  errors.rs  excursion.rs  flake_lock.rs  lib.rs  main.rs  messages.rs
