[package]
name = "nixos-systool"
authors = ["Jeremy Shoemaker <jeremy@codingkoi.com>"]
version = "1.7.0"
edition = "2021"
license = "GPL-3.0-or-later"

[profile.release]
opt-level = "z"
lto = true
overflow-checks = false
panic = "abort"
codegen-units = 1
strip = "symbols"

[dependencies]
anyhow = "1.0.71"
camino = { version = "1.1.1", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
clap = { version = "4", features = ["derive", "env", "wrap_help", "cargo"] }
directories = "4.0.1"
duct = "0.13"
figment = { version = "0.10.8", features = ["toml"] }
nix = "0.26"
notify-rust = "4"
os_info = { version = "3", default-features = false }
owo-colors = "3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = { version = "0.16.0", features = ["smawk", "terminal_size"] }
thiserror = "1.0"
toml = "0.5.11"
